fix navbar overflow

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -423,7 +423,7 @@ img {
 }
 
 .header-nav .navbar-brand {
-  margin-left: 8rem;
+  margin-left: 10rem;
 	color: #fff;
 	font-weight: 800;
 	position: relative;
